fix: input text align

--- a/public/style.css
+++ b/public/style.css
@@ -16,7 +16,9 @@ h3 {
   margin-top: 30px;
 }
 
-
+#url-input {
+  text-align: left;
+}
 
 .user-stories li {
   margin-bottom: 1em;
